--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "parcel-bundler": "^1.6.1",
     "regenerator-runtime": "0.13.9",
     "stats.js": "0.17.0",
+    "three": "0.132.2",
     "tweakpane": "3.0.5"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "browserslist": ["last 1 Chrome version"],
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "keywords": []
 }
